preready_vr_game

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
@@ -227,9 +227,7 @@ LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/My_project/BPI_PrinterInteraction.BPI_PrinterInteraction
-OpenAssetsAtExit=/Game/My_project/BP_3DPriter.BP_3DPriter
-OpenAssetsAtExit=/Game/My_project/W_3DPrinterMenu.W_3DPrinterMenu
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRPawn.VRPawn
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -735,12 +733,263 @@ MotionControllerComponent.Activation=True
 MotionControllerComponent.Cooking=True
 MotionControllerComponent.Events=True
 W_3DPrinterMenu_C.Default=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+VRGameMode_C.TransformCommon=True
+VRGameMode_C.Classes=True
+VRGameMode_C.Game=True
+VRGameMode_C.GameMode=True
+SpectatorPawn.TransformCommon=True
+SpectatorPawn.Pawn=True
+SpectatorPawn.FloatingPawnMovement=True
+SpectatorPawn.NavMovement=True
+SpectatorPawn.Velocity=True
+SpectatorPawn.Physics=True
+SpectatorPawn.PlanarMovement=True
+SpectatorPawn.Collision=True
+SpectatorPawn.MovementComponent=True
+SpectatorPawn.Tags=True
+SpectatorPawn.Activation=True
+SpectatorPawn.Rendering=True
+SpectatorPawn.Cooking=True
+SpectatorPawn.Shape=True
+SpectatorPawn.Navigation=True
+SpectatorPawn.Camera=True
+SpectatorPawn.Replication=True
+SpectatorPawn.Input=True
+SpectatorPawn.Actor=True
+VRSpectator_C.TransformCommon=True
+VRSpectator_C.Default=True
+VRSpectator_C.Camera Settings=True
+VRSpectator_C.Replication=True
+VRSpectator_C.Rendering=True
+VRSpectator_C.Collision=True
+VRSpectator_C.Input=True
+VRSpectator_C.CameraSettings=True
+VRSpectator_C.Actor=True
+VRSpectator_C.Tick=True
+TextureRenderTarget2D.TextureRenderTarget2D=True
+TextureRenderTarget2D.TextureRenderTarget=True
+TextureRenderTarget2D.File Path=True
+TextureRenderTarget2D.LevelOfDetail=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.World=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache S3=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommand=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.LiveLinkClient.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommand=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommand=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TextureEditor=True
+EditorKeyboardShortcutSettings.TimingProfilerCommand=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+SynthesisEditorSettings.Source Effects=True
+SynthesisEditorSettings.Submix Effects=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Experimental=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TakeRecorderUserSettings.User Settings=True
+TextureEditorSettings.Background=True
+TextureEditorSettings.TextureBorder=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+PythonScriptPluginUserSettings.Python=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+LogVisualizerSettings.VisualLogger=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Lens=True
+CameraActor.Color Grading=True
+CameraActor.Rendering Features=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+CameraComponent.Variable=True
+CameraComponent.Sockets=True
+CameraComponent.ComponentTick=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/My_project/W_3DPrinterMenu
+MRUItem0=/Game/VRTemplate/Blueprints/VRPawn
 MRUItem1=/Game/My_project/BP_3DPriter
-MRUItem2=/Game/My_project/BPI_PrinterInteraction
-MRUItem3=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem2=/Game/VRSpectator/RT_VRSpectator
+MRUItem3=/Game/VRSpectator/VRSpectator
+MRUItem4=/Game/My_project/W_3DPrinterMenu
+MRUItem5=/Game/My_project/BPI_PrinterInteraction
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -818,7 +1067,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/My_project
+ContentBrowserTab1.SelectedPaths=/Game/VRSpectator
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -840,21 +1089,67 @@ RecentlyPlaced=/Game/My_project/BP_3DPriter.BP_3DPriter;
 CryptoKeysSettings=True
 GeneralProjectSettings=True
 InputSettings=True
+EditorStyleSettings=True
+EditorExperimentalSettings=True
+EditorSettings=True
+EditorKeyboardShortcutSettings=True
+LiveCodingSettings=True
+EditorLoadingSavingSettings=True
+EditorPerProjectUserSettings=True
+EditorPerformanceSettings=True
+InternationalizationSettingsModel=True
+SourceCodeAccessSettings=True
+SynthesisEditorSettings=True
+EditorTutorialSettings=True
+VRModeSettings=True
+LevelEditorMiscSettings=True
+LevelEditorPlaySettings=True
+OnlinePIESettings=True
+LevelEditorViewportSettings=True
+PersonaOptions=True
+BlueprintEditorSettings=True
+ContentBrowserSettings=True
+CurveEditorSettings=True
+SequencerSettings=True
+FlipbookEditorSettings=True
+GraphEditorSettings=True
+MaterialEditorSettings=True
+MeshPaintSettings=True
+SkeletalMeshEditorSettings=True
+SpriteEditorSettings=True
+TakeRecorderUserSettings=True
+TextureEditorSettings=True
+TileMapEditorSettings=True
+TileSetEditorSettings=True
+WidgetDesignerSettings=True
+PythonScriptPluginUserSettings=True
+CrashReportsPrivacySettings=True
+AnalyticsPrivacySettings=True
+AutomationTestSettings=True
+CrashReporterSettings=True
+DataValidationSettings=True
+GameplayTagsDeveloperSettings=True
+LogVisualizerSettings=True
 
 [DetailCategoriesAdvanced]
 WidgetInteractionComponent.Debugging=True
 WidgetComponent.Collision=True
 PropertyWrapper.Variable=False
 EdGraph.Graph=True
+VRPawn_C.Collision=True
+VRPawn_C.Tick=True
 
 [DetailPropertyExpansion]
 WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
+ActorComponent=
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[28]\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -893,8 +1188,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=404.000
-WindowSize=X=1291.200 Y=731.200
+ScreenPosition=X=230.400 Y=124.800
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1785,18 +2080,20 @@ SceneOutliner.TimeStamp=2024.09.14-11.14.50
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2024.09.14-11.14.41
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2024.09.05-18.19.31
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2024.09.05-18.19.30
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2024.09.14-11.14.57
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2024.09.14-11.14.46
+MovieSceneCapture.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2024.09.14-11.14.31
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2024.09.14-11.14.51
 SequencerWidgets.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2024.09.05-18.19.30
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2024.09.05-18.19.30
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2024.09.14-11.14.40
+ExternalImagePicker.LastCompileMethod=External
+TextureEditor.TimeStamp=2024.09.14-11.14.54
+TextureEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1815,4 +2112,5 @@ bDeleteSourceFilesWithAssets=False
 [AssetEditorToolkitTabLocation]
 /Game/My_project/BPI_PrinterInteraction.BPI_PrinterInteraction=0
 /Game/My_project/W_3DPrinterMenu.W_3DPrinterMenu=1
+/Game/VRSpectator/RT_VRSpectator.RT_VRSpectator=0
 
