ending print stage

--- a/FinalProject/EngiPracrice/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalProject/EngiPracrice/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,6 +82,10 @@ LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/MyLogic/BP_3DPrinter.BP_3DPrinter
+OpenAssetsAtExit=/Game/MyLogic/BPI_PrinterIteraction.BPI_PrinterIteraction
+OpenAssetsAtExit=/Game/MyLogic/W_3DPrinterUI.W_3DPrinterUI
+OpenAssetsAtExit=/Game/MyLogic/BP_Origin.BP_Origin
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1031,8 +1035,111 @@ VRGameMode_C.TransformCommon=True
 VRGameMode_C.Classes=True
 VRGameMode_C.Game=True
 VRGameMode_C.GameMode=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_SetFieldsInStruct.PinOptions=True
+K2Node_MakeStruct.PinOptions=True
+W_ErrorWidget_C.Appearance=True
+W_ErrorWidget_C.Designer=True
+W_ErrorWidget_C.Input=True
+W_ErrorWidget_C.Interaction=True
+W_ErrorWidget_C.Performance=True
+W_ErrorWidget_C.Layout=True
+W_ErrorWidget_C.Behavior=True
+W_ErrorWidget_C.Render Transform=True
+W_ErrorWidget_C.Accessibility=True
+W_ErrorWidget_C.Clipping=True
+W_ErrorWidget_C.Navigation=True
+W_ErrorWidget_C.Localization=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_VariableSet.Events=True
+SpectatorPawn.TransformCommon=True
+SpectatorPawn.Pawn=True
+SpectatorPawn.FloatingPawnMovement=True
+SpectatorPawn.NavMovement=True
+SpectatorPawn.Velocity=True
+SpectatorPawn.Physics=True
+SpectatorPawn.PlanarMovement=True
+SpectatorPawn.Collision=True
+SpectatorPawn.MovementComponent=True
+SpectatorPawn.Tags=True
+SpectatorPawn.Activation=True
+SpectatorPawn.Rendering=True
+SpectatorPawn.Cooking=True
+SpectatorPawn.Shape=True
+SpectatorPawn.Navigation=True
+SpectatorPawn.Camera=True
+SpectatorPawn.Replication=True
+SpectatorPawn.Input=True
+SpectatorPawn.Actor=True
+PanelWidget.Layout=True
+PanelWidget.Behavior=True
+PanelWidget.Accessibility=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Clipping=True
+PanelWidget.Navigation=True
+PanelWidget.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+W_Assembly_C.Appearance=True
+W_Assembly_C.Designer=True
+W_Assembly_C.Input=True
+W_Assembly_C.Interaction=True
+W_Assembly_C.Performance=True
+W_Assembly_C.Layout=True
+W_Assembly_C.Behavior=True
+W_Assembly_C.Render Transform=True
+W_Assembly_C.Accessibility=True
+W_Assembly_C.Clipping=True
+W_Assembly_C.Navigation=True
+W_Assembly_C.Localization=True
+SceneComponent.AssetUserData=False
+K2Node_CallFunction.Graph=True
+WidgetBlueprint.ClassOptions=True
+WidgetBlueprint.BlueprintOptions=True
+WidgetBlueprint.Interfaces=True
+WidgetBlueprint.Packaging=True
+K2Node_Message.Graph=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Game/VRSpectator/VRSpectator.VRSpectator;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/VRPawn.VRPawn;
 RecentlyPlaced=/Game/MyLogic/BP_PrintedBase.BP_PrintedBase;
@@ -1052,7 +1159,6 @@ RecentlyPlaced=/Game/MyMehes/Robot/Wheel.Wheel;
 RecentlyPlaced=/Game/MyMehes/Worbench/Workbench.Workbench;
 RecentlyPlaced=/Game/MyMehes/Laptop/Laptop.Laptop;
 RecentlyPlaced=/Game/MyMehes/LaptopTable/Tool_Chest_Workbench.Tool_Chest_Workbench;
-RecentlyPlaced=/Game/MyMehes/LaptopTable/BMD_BeechWood.BMD_BeechWood;
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2158,18 +2264,24 @@ ExternalImagePicker.LastCompileMethod=Unknown
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyLogic/BP_PrintedWheels
-MRUItem1=/Game/MyLogic/BP_Origin
+MRUItem0=/Game/MyLogic/W_3DPrinterUI
+MRUItem1=/Game/MyLogic/BPI_PrinterIteraction
 MRUItem2=/Game/MyLogic/BP_3DPrinter
-MRUItem3=/Game/MyLogic/W_3DPrinterUI
-MRUItem4=/Game/VRTemplate/Blueprints/VRPawn
-MRUItem5=/Game/MyLogic/BP_PrintedMounts
-MRUItem6=/Game/VRSpectator/VRSpectator
-MRUItem7=/Game/MyLogic/BP_PrintedBase
-MRUItem8=/Game/MyLogic/BPI_PrinterIteraction
-MRUItem9=/Game/MyLogic/WB_Menu
-MRUItem10=/Game/MyLogic/BP_Electronics
-MRUItem11=/Game/MyLogic/BP_PrintedParts
+MRUItem3=/Game/MyLogic/BP_Origin
+MRUItem4=/Game/MyLogic/BPI_Assembly
+MRUItem5=/Game/MyLogic/ErrorCount
+MRUItem6=/Game/MyLogic/W_Assembly
+MRUItem7=/Game/MyLogic/BPI_AsssemblyIteraction
+MRUItem8=/Game/MyLogic/FPrinterErrorData
+MRUItem9=/Game/MyLogic/W_ErrorWidget
+MRUItem10=/Game/MyLogic/BP_PrintedWheels
+MRUItem11=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem12=/Game/MyLogic/BP_PrintedMounts
+MRUItem13=/Game/VRSpectator/VRSpectator
+MRUItem14=/Game/MyLogic/BP_PrintedBase
+MRUItem15=/Game/MyLogic/WB_Menu
+MRUItem16=/Game/MyLogic/BP_Electronics
+MRUItem17=/Game/MyLogic/BP_PrintedParts
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2213,6 +2325,14 @@ NodeTemplateCacheCapMB=20.000000
 /Game/MyLogic/BPI_PrinterIteraction.BPI_PrinterIteraction=0
 /Game/MyLogic/BP_PrintedWheels.BP_PrintedWheels=0
 /Game/VRSpectator/VRSpectator.VRSpectator=0
+/Game/MyLogic/FPrinterErrorData.FPrinterErrorData=0
+/Game/MyLogic/W_ErrorWidget.W_ErrorWidget=0
+/Game/MyLogic/ErrorCount.ErrorCount=0
+/Game/MyLogic/W_Assembly.W_Assembly=0
+/Game/MyLogic/BPI_Assembly.BPI_Assembly=0
+/Game/MyLogic/BP_Origin.BP_Origin=0
+/Game/MyLogic/BP_3DPrinter.BP_3DPrinter=0
+/Game/MyLogic/W_3DPrinterUI.W_3DPrinterUI=0
 
 [DetailCategoriesAdvanced]
 BP_PrintedParts_C.Collision=True
@@ -2226,6 +2346,8 @@ VRPawn_C.Tick=True
 VRPawn_C.Replication=True
 VRPawn_C.Actor=True
 VRPawn_C.Collision=True
+WidgetComponent.Physics=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2330,6 +2452,8 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Trigger_Keyboard_R,InputSettings.Bindings.ActionMappings.Trigger_Keyboard_L,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Trigger_Keyboard_R,InputSettings.Bindings.ActionMappings.Trigger_Keyboard_L,
 WidgetComponent=WidgetComponent.Collision.Collision,
+W_ErrorWidget_C=
+W_Assembly_C=
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2395,15 +2519,15 @@ Favorites=Text
 
 [DetailPropertyExpansion]
 Button="\"Object.Appearance.BackgroundColor\" "
-ContentWidget="\"Object.Appearance.BackgroundColor\" "
-PanelWidget=
-Widget="\"Object.PrintTimeParts\" "
-Visual="\"Object.PrintTimeParts\" "
+ContentWidget="\"Object.Content.Padding\" \"Object.Appearance.BrushColor\" "
+PanelWidget="\"Object.Content.Padding\" \"Object.Appearance.BrushColor\" "
+Widget="\"Object.PartCount\" "
+Visual="\"Object.PartCount\" "
 Object=
 Border="\"Object.Content.Padding\" \"Object.Appearance.BrushColor\" "
 CheckBox="\"Object.Style.WidgetStyle\" "
-W_3DPrinterUI_C="\"Object.PrintTimeParts\" "
-UserWidget="\"Object.PrintTimeParts\" "
+W_3DPrinterUI_C="\"Object.PartCount\" "
+UserWidget="\"Object.PartCount\" "
 Slider="\"Object.Style.WidgetStyle\" "
 BP_3DPrinter_C="\"Object.Offset\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2411,10 +2535,11 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[28]\" \"Object.Console.ConsoleKeys\" "
 WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent=
-PrimitiveComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 ActorComponent=
+Image="\"Object.Appearance.Brush\" "
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
